--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   .pc .slot-3{ top:40% !important; right:20% !important; width:10% !important; height:25% !important; }/*px1rt*/
   .pc .slot-4{ top:20% !important; right:17% !important; width:10% !important; height:15% !important; } /*buy*/
   .pc .slot-5{ top:40% !important; left:20% !important; width:20% !important; height:40% !important; } /*YouTube*/
-  .pc .slot-6{ top:30% !important; right:12% !important; width:5% !important; height:10% !important; } /**/
+  .pc .slot-6{ top:33% !important; right:15% !important; width:5% !important; height:10% !important; } /**/
   
   /* Mobile slot positioning */
   .mobile .slot-1{ top:33% !important; left:2% !important; width:25% !important; height:10% !important; } /*Firadpatra*/
@@ -235,11 +235,11 @@
 
   <!-- Clickable areas over greenscreen positions -->
   <div class="slot slot-1" data-slot="#1">
-    <a href="https://firadpatra.com" aria-label="Link 1" title="Link 1"></a>
+    <a href="https://firadpatra.com" aria-label="FiradPatra" title="FiradPatra"></a>
   </div>
 
   <div class="slot slot-2" data-slot="#2">
-    <a href="/posts.html" aria-label="Latest Post" title="Latest Post"></a>
+    <a href="/posts.html" aria-label="Latest Post" title="Pilot"></a>
   </div>
 
   <div class="slot slot-3" data-slot="#3">
@@ -247,7 +247,7 @@
   </div>
 
   <div class="slot slot-4" data-slot="#4">
-    <a href="#" aria-label="Link 4" title="Link 4"></a>
+    <a href="https://www.amazon.com/dp/B0D7M95597" aria-label="Kathmandu on Amazon" title="Amazon"></a>
   </div>
 
   <div class="slot slot-5" data-slot="#5">
@@ -255,7 +255,7 @@
   </div>
 
  <div class="slot slot-6" data-slot="#6">
-    <a href="#" aria-label="Link 6" title="Link 6"></a>
+    <a href="/files/Kathmandu.pdf" aria-label="Free Download Kathmandu" title="Free Download Kathmandu"></a>
   </div>
   
 </section>
@@ -268,7 +268,7 @@
 
   <!-- Clickable areas over greenscreen positions -->
   <div class="slot slot-1" data-slot="#1">
-    <a href="#" aria-label="Link 1" title="Link 1"></a>
+    <a href="https://firadpatra.com" aria-label="FiradPatra" title="FiradPatra"></a>
   </div>
 
   <div class="slot slot-2" data-slot="#2">
@@ -276,7 +276,7 @@
   </div>
 
   <div class="slot slot-3" data-slot="#3">
-    <a href="#" aria-label="Link 3" title="Link 3"></a>
+    <a href="https://www.amazon.com/dp/B0D7M95597" aria-label="Kathmandu on Amazon" title="Amazon"></a>
   </div>
 
   <div class="slot slot-4" data-slot="#4">
@@ -288,7 +288,7 @@
   </div>
 
   <div class="slot slot-6" data-slot="#6">
-    <a href="#" aria-label="Link 6" title="Link 6"></a>
+    <a href="/files/Kathmandu.pdf" aria-label="Free Download Kathmandu" title="Free Download Kathmandu"></a>
   </div>
 </section>
 
