--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 <title>manas.net</title>
+<link rel="icon" type="image/png" href="/files/favicon.png">
 <style>
   :root{
     --overlay-opacity: 0.6;
