--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <!-- Footer nav -->
 <nav class="footer-nav" aria-label="Footer navigation">
   <div class="footer-left"><a id="resume-link" href="/files/resume.pdf" download>Resume</a></div>
-  <div class="footer-center"><a id="newsletter-open" href="#newsletter">Signup for Newsletter</a></div>
+  <div class="footer-center"></div>
   <div class="footer-right"><a id="archive-link" href="/archive.html">Archive posts</a></div>
 </nav>
 
