--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Latest Post</title>
+<title>Fired</title>
+<link rel="icon" type="image/png" href="/files/favicon.png">
 <style>
   html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:#000;color:#d4a574;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
   .container{max-width:800px;margin:0 auto;padding:60px 24px;min-height:100vh;box-sizing:border-box;}
