--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   .pc .slot-3{ top:40% !important; right:20% !important; width:10% !important; height:25% !important; }/*px1rt*/
   .pc .slot-4{ top:20% !important; right:20% !important; width:7% !important; height:15% !important; } /*buy*/
   .pc .slot-5{ top:40% !important; left:20% !important; width:20% !important; height:40% !important; } /*YouTube*/
-  .pc .slot-6{ top:33% !important; right:15% !important; width:5% !important; height:10% !important; } /**/
+  .pc .slot-6{ top:25% !important; right:15% !important; width:5% !important; height:15% !important; } /*free*/
   
   /* Mobile slot positioning */
   .mobile .slot-1{ top:33% !important; left:2% !important; width:25% !important; height:10% !important; } /*Firadpatra*/
