Update links in index.html to point to new files

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- target="_blank" added to external links -->
   <div class="slot slot-1"><a href="https://firadpatra.com" target="_blank"></a></div>
   <!-- No target="_blank" for local blogpost -->
-  <div class="slot slot-2"><a href="/posts.html"></a></div>
+  <div class="slot slot-2"><a href="/files/firedch1.html"></a></div>
   <div class="slot slot-3"><a href="https://px1rt.net" target="_blank"></a></div>
   <div class="slot slot-4"><a href="https://www.amazon.com/dp/B0D7M95597" target="_blank"></a></div>
   <div class="slot slot-5"><a href="https://youtube.com/@manas.mp4?si=ucXaTbTFtP-lEuC8" target="_blank"></a></div>
@@ -110,7 +110,7 @@
 <section class="scene mobile">
   <div class="lights"><img id="lights-mobile" src="/mobile/lights.gif" alt="" /></div>
   <div class="slot slot-1"><a href="https://firadpatra.com" target="_blank"></a></div>
-  <div class="slot slot-2"><a href="/posts.html"></a></div>
+  <div class="slot slot-2"><a href="/files/firedch1.html"></a></div>
   <div class="slot slot-3"><a href="https://www.amazon.com/dp/B0D7M95597" target="_blank"></a></div>
   <div class="slot slot-4"><a href="https://youtube.com/@manas.mp4?si=ucXaTbTFtP-lEuC8" target="_blank"></a></div>
   <div class="slot slot-5"><a href="https://px1rt.net" target="_blank"></a></div>
